2016-07-23 Franz Holzinger <franz@ttproducts.de>
	* restructuring: move constants.txt and setup.txt from folder static into /Configuration/TypoScript/PluginSetup/
	* restructuring: copy files  pi/class.tx_agency_pi_base.php and control/class.tx_agency_control_main.php into Classes/Controller/RegisterPluginController.php, Classes/Controller/InitializationController.php and Classes/Configuration/ConfigurationCheck.php.
	* fix bug #77229: use the newer class tx_div2007_alpha5::getSetupOrFFvalue_fh004 instead of tx_div2007_alpha::getSetupOrFFvalue_fh002 .

2016-06-18 Franz Holzinger <franz@ttproducts.de>
	* bugfix in file Configuration/TCA/sys_dmail_category.php

2016-06-17 Franz Holzinger <franz@ttproducts.de>
	* feature: Support for TYPO3 7.x. Make a copy of class tx_agency_display under JambageCom\\Agency\\View\\CreateView which calls the div2007 method FrontendUtility::getUpdateJS instead of the TYPO3 CONTENT object

2016-06-15 Franz Holzinger <franz@ttproducts.de>
	* bugfix: The first view of the creation page must not show any error messages.
	* feature: Consider Microsoft Windows limitations to the endtime year 2038
	* bugfix for TYPO3 6.2 and 7.x: use the TYPO3 6.2 class name
		\TYPO3\CMS\Core\Utility\ExtensionManagementUtility instead of t3lib_extMgm and
		\TYPO3\CMS\Core\Utility\GeneralUtility instead of t3lib_div
	* bugfix for TYPO3 6.2 and 7.x: consider the DirectMail categories if DirectMail is not installed.

2016-06-14 Franz Holzinger <franz@ttproducts.de>
	* bugfix for PHP 7.x: The method init of tx_agency_lang cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.
	* remove the $Id$ file versions which have been used by subversion
	* remove the closing php brackets
	* remove the markers ###PASSWORD_ONCHANGE### and ###NAME_PASSWORD###
	* change the input password attributes into the order type, name, id, class, ... title, value

2015-12-07 Franz Holzinger <franz@ttproducts.de>