@@ -1,3 +1,6 @@
+2016-07-25 Franz Holzinger <franz@ttproducts.de>
+	* fix bug #77232: bugfix for PHP 7.x. replace all tx_div2007_alpha class methods by corresponding tx_div2007_alpha5 methods
+
 2016-07-23 Franz Holzinger <franz@ttproducts.de>
 	* restructuring: move constants.txt and setup.txt from folder static into /Configuration/TypoScript/PluginSetup/
 	* restructuring: copy files  pi/class.tx_agency_pi_base.php and control/class.tx_agency_control_main.php into Classes/Controller/RegisterPluginController.php, Classes/Controller/InitializationController.php and Classes/Configuration/ConfigurationCheck.php.
